# coral

./: .gitignore  CLI.md  Cargo.toml  README.md  config.json  examples.sh
src/: cli.rs  config.rs  error.rs  handler.rs  lib.rs  main.rs  metrics.rs  resp.rs  storage.rs  storage_backends.rs  telemetry.rs
src/protocol/: detector.rs  inline.rs  mod.rs  resp.rs
src/server/: handler.rs  mod.rs
src/storage/: lmdb.rs  memory.rs  mod.rs  s3.rs  traits.rs
tests/: integration_tests.rs
