[package]
name = "coral-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
papaya = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
# OpenTelemetry metrics
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["metrics"] }
prometheus = "0.13"
# LMDB backend
lmdb = { version = "0.8", optional = true }
# S3 backend  
aws-sdk-s3 = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
uuid = { version = "1.0", optional = true }

[features]
default = ["memory"]
memory = []
lmdb-backend = ["lmdb"]
s3-backend = ["aws-sdk-s3", "aws-config", "uuid"]

[dev-dependencies]
tokio-test = "0.4"